--- a/app-sci/ncbi-tools/ChangeLog
+++ b/app-sci/ncbi-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-sci/ncbi-tools
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/ncbi-tools/Attic/ChangeLog,v 1.12 2004/05/04 23:17:05 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/ncbi-tools/Attic/ChangeLog,v 1.13 2004/06/02 14:20:20 agriffis Exp $
+
+  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> ncbi-tools-20031103.ebuild,
+  ncbi-tools-20040202-r1.ebuild:
+  Fix use invocation
 
   05 May 2004; Bryan Østergaard <kloeri@gentoo.org>
   ncbi-tools-20040202-r1.ebuild:
