--- a/sys-kernel/selinux-sources/ChangeLog
+++ b/sys-kernel/selinux-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/selinux-sources
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/selinux-sources/Attic/ChangeLog,v 1.37 2004/05/27 22:59:32 pebenito Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/selinux-sources/Attic/ChangeLog,v 1.38 2004/06/15 20:57:12 pebenito Exp $
+
+*selinux-sources-2.4.26-r1 (15 Jun 2004)
+
+  15 Jun 2004; Chris PeBenito <pebenito@gentoo.org>
+  -selinux-sources-2.4.24-r2.ebuild, -selinux-sources-2.4.25-r2.ebuild,
+  +selinux-sources-2.4.26-r1.ebuild, -selinux-sources-2.4.26.ebuild:
+  Update for #47881 and #53804 vulnerabilities.
 
 *selinux-sources-2.4.26 (27 May 2004)
 
