--- a/media-sound/poc/ChangeLog
+++ b/media-sound/poc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/poc
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/poc/ChangeLog,v 1.1 2005/05/07 08:42:12 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/poc/ChangeLog,v 1.2 2005/07/25 19:05:39 dholm Exp $
+
+  25 Jul 2005; David Holm <dholm@gentoo.org> poc-0.4.1.ebuild:
+  Added to ~ppc.
 
 *poc-0.4.1 (07 May 2005)
 
