--- a/sci-biology/ncbi-tools/ChangeLog
+++ b/sci-biology/ncbi-tools/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-biology/ncbi-tools
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/ncbi-tools/ChangeLog,v 1.16 2005/06/09 10:16:21 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/ncbi-tools/ChangeLog,v 1.17 2005/08/06 22:34:10 ribosome Exp $
+
+*ncbi-tools-20050605 (06 Aug 2005)
+
+  06 Aug 2005; Olivier Fisette <ribosome@gentoo.org>
+  -ncbi-tools-20040616.ebuild, ncbi-tools-20050429.ebuild,
+  +ncbi-tools-20050605.ebuild:
+  New version. Added 20050429 to x86. Removed old version.
 
   09 Jun 2005; Markus Rothe <corsair@gentoo.org>
   ncbi-tools-20041020-r1.ebuild:
