--- a/sci-biology/t-coffee/ChangeLog
+++ b/sci-biology/t-coffee/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/t-coffee
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/t-coffee/ChangeLog,v 1.4 2005/08/07 14:55:45 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/t-coffee/ChangeLog,v 1.5 2005/08/08 11:00:44 dholm Exp $
+
+  08 Aug 2005; David Holm <dholm@gentoo.org> t-coffee-2.66.ebuild:
+  Added to ~ppc.
 
 *t-coffee-2.66 (07 Aug 2005)
 
