--- a/sci-biology/ncbi-tools/ChangeLog
+++ b/sci-biology/ncbi-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/ncbi-tools
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/ncbi-tools/ChangeLog,v 1.17 2005/08/06 22:34:10 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/ncbi-tools/ChangeLog,v 1.18 2005/08/08 22:52:46 ranger Exp $
+
+  08 Aug 2005; Brent Baude <ranger@gentoo.org> ncbi-tools-20050429.ebuild:
+  ncbi-tools-20050429.ebuild does not compile on ppc64; will fix later ebuild
 
 *ncbi-tools-20050605 (06 Aug 2005)
 
