--- a/sci-biology/cutg/ChangeLog
+++ b/sci-biology/cutg/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/cutg
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/cutg/ChangeLog,v 1.40 2006/04/08 10:29:16 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/cutg/ChangeLog,v 1.41 2006/06/26 03:24:14 ribosome Exp $
+
+*cutg-151 (26 Jun 2006)
+
+  26 Jun 2006; Olivier Fisette <ribosome@gentoo.org> +cutg-151.ebuild:
+  New version.
 
   08 Apr 2006; Simon Stelling <blubb@gentoo.org> cutg-150.ebuild:
   stable on amd64
