--- a/x11-libs/pango/ChangeLog
+++ b/x11-libs/pango/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/pango
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/pango/ChangeLog,v 1.137 2006/06/25 20:28:46 the_paya Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/pango/ChangeLog,v 1.138 2006/06/30 17:40:53 allanonjl Exp $
+
+*pango-1.12.3 (30 Jun 2006)
+
+  30 Jun 2006; <allanonl@gentoo.org> -pango-1.12.2.ebuild,
+  +pango-1.12.3.ebuild:
+  new version.
 
   25 Jun 2006; Javier Villavicencio <the_paya@gentoo.org>
   pango-1.12.2.ebuild:
