--- a/media-libs/bio2jack/ChangeLog
+++ b/media-libs/bio2jack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/bio2jack
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/bio2jack/ChangeLog,v 1.26 2006/07/07 04:20:35 tsunam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/bio2jack/ChangeLog,v 1.27 2006/07/09 00:43:27 josejx Exp $
+
+  09 Jul 2006; Joseph Jezak <josejx@gentoo.org> bio2jack-0.7.ebuild:
+  Marked ppc stable for bug #138227.
 
   07 Jul 2006; Joshua Jackson <tsunam@gentoo.org> bio2jack-0.7.ebuild:
   Stable x86; for xmms-jack
