--- a/sci-biology/probcons/ChangeLog
+++ b/sci-biology/probcons/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/probcons
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/probcons/ChangeLog,v 1.2 2006/07/07 05:43:58 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/probcons/ChangeLog,v 1.3 2006/07/09 07:18:06 dberkholz Exp $
+
+  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; probcons-1.10.ebuild:
+  x86 stable.
 
   07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update to my new email address.
