--- a/dev-ruby/activeresource/ChangeLog
+++ b/dev-ruby/activeresource/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activeresource
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.48 2009/10/18 17:22:52 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.49 2009/10/18 17:44:55 a3li Exp $
+
+  18 Oct 2009; Alex Legler <a3li@gentoo.org> -activeresource-2.2.2.ebuild:
+  removing vulnerable ebuild, bug 283396
 
   18 Oct 2009; nixnut <nixnut@gentoo.org> activeresource-2.2.3.ebuild:
   ppc stable #283396
