--- a/media-plugins/gst-plugins-pango/ChangeLog
+++ b/media-plugins/gst-plugins-pango/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-plugins/gst-plugins-pango
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-pango/ChangeLog,v 1.149 2011/02/20 22:02:18 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-pango/ChangeLog,v 1.150 2011/02/24 07:06:52 leio Exp $
+
+*gst-plugins-pango-0.10.32 (24 Feb 2011)
+
+  24 Feb 2011; Mart Raudsepp <leio@gentoo.org>
+  -gst-plugins-pango-0.10.24.ebuild, -gst-plugins-pango-0.10.25.ebuild,
+  -gst-plugins-pango-0.10.28.ebuild, -gst-plugins-pango-0.10.30.ebuild,
+  +gst-plugins-pango-0.10.32.ebuild:
+  Version bump. Minor fixes in this release. Remove old
 
   20 Feb 2011; Markus Meier <maekke@gentoo.org>
   gst-plugins-pango-0.10.31.ebuild:
