--- a/media-plugins/gst-plugins-pango/ChangeLog
+++ b/media-plugins/gst-plugins-pango/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-pango
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-pango/ChangeLog,v 1.151 2011/02/27 15:30:04 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-pango/ChangeLog,v 1.152 2011/03/01 15:06:41 jer Exp $
+
+  01 Mar 2011; Jeroen Roovers <jer@gentoo.org>
+  gst-plugins-pango-0.10.31.ebuild:
+  Stable for HPPA (bug #353434).
 
   27 Feb 2011; Brent Baude <ranger@gentoo.org>
   gst-plugins-pango-0.10.31.ebuild:
