--- a/sci-biology/maq/ChangeLog
+++ b/sci-biology/maq/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/maq
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/maq/ChangeLog,v 1.7 2011/12/15 22:26:13 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/maq/ChangeLog,v 1.8 2011/12/15 22:37:04 jlec Exp $
+
+  15 Dec 2011; Justin Lecher <jlec@gentoo.org> maq-0.7.1-r1.ebuild:
+  Add missing dependency on sys-libs/zlib
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> maq-0.7.1-r1.ebuild:
   Stable for AMD64, wrt bug #393759
